fix: checkbox spacing in scss

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -390,3 +390,9 @@ input[type="checkbox"]:disabled {
   opacity: 0.84;
   cursor: not-allowed;
 }
+
+.form-check-label {
+  color: lightgray;
+  margin-left: 0.5rem;
+  margin-top: 15px;
+}
