--- a/src/assets/scss/onboarding.scss
+++ b/src/assets/scss/onboarding.scss
@@ -55,12 +55,6 @@
 #onboarding-title-2 {
 }
 
-.form-check-label {
-  color: lightgray;
-  margin-left: 0.5rem;
-  margin-top: 15px;
-}
-
 .send-analytics-pref {
   text-align: center;
 }
